--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.6.4",
+    "mongoose-errors": "^1.1.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
