--- a/frontend/groupomania/package.json
+++ b/frontend/groupomania/package.json
@@ -13,11 +13,13 @@
     "create-react-app": "^1.2.1",
     "i": "^0.3.7",
     "jsx": "^0.9.89",
+    "node-sass": "^7.0.3",
     "npm": "^8.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "sass-loader": "^13.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
